--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,5 @@
-$mainTheme: rgba(0, 0, 0, 0.537);
-$backgroundNews: rgba(0, 0, 0, 0.142);
+$mainTheme: rgb(0, 0, 0);
+$backgroundNews: rgba(0, 0, 0, 0.393);
 $buttonBorderStyle: solid, rgb(0, 0, 0), 1.5px;
 body {
   background-color: $mainTheme;
@@ -8,29 +8,60 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-#divHeader {
-  width: 100%;
-  background-color: rgba(126, 124, 124, 0.895);
-}
-header {
-  width: 100%;
-}
-h1 {
-  text-align: center;
-  font-size: 40px;
-}
-main {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
 
-#loadMoreButton {
-  border: $buttonBorderStyle;
-  border-radius: 7px;
-  height: 55px;
-  width: 160px;
-  font-size: 18px;
-  background-color: rgba(255, 255, 255, 0.909);
+  #divHeader {
+    width: 100%;
+    height: 120px;
+    background-color: $mainTheme;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      text-align: center;
+      font-size: 50px;
+      color: rgb(255, 255, 255);
+    }
+  }
+  main {
+    margin-top: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    #loadMoreButton {
+      margin-top: 10px;
+      border: $buttonBorderStyle;
+      font-weight: bold;
+      border-radius: 7px;
+      height: 55px;
+      width: 160px;
+      font-size: 18px;
+      background-color: rgba(255, 255, 255, 0.909);
+    }
+    ul {
+      width: 80%;
+      padding-left: 0px;
+      li {
+        list-style-type: none;
+        .text-body-secondary {
+          background-color: white;
+          color: black;
+        }
+
+        .list-group {
+          width: 100%;
+          border: solid black 0.5px;
+          box-shadow: 0px 0px 10px 10px rgba(250, 250, 250, 0.76);
+        }
+
+        .linkNews {
+          text-decoration: none;
+          background-color: white;
+          color: black;
+        }
+      }
+    }
+  }
 }
