--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -45,6 +45,9 @@ body {
       padding-left: 0px;
       li {
         list-style-type: none;
+        h5 {
+          color: rgb(31, 31, 94);
+        }
         .text-body-secondary {
           background-color: white;
           color: black;
