--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -63,6 +63,7 @@ body {
           text-decoration: none;
           background-color: white;
           color: black;
+          overflow-wrap: break-word;
         }
       }
     }
